jwt authentication, returns token
